[package]
name = "redis_ipc"
version = "0.1.0"
edition = "2021"

[dependencies]
redis = { version = "0.27", features = ["r2d2"] }
serde_json = "1.0"
serde = { version = "1.0.215", features = ["derive"] }
r2d2 = "0.8"
uuid = { version = "1.11", features = ["v4"] }

[dev-dependencies]
dotenvy = "0.15"