[package]
name = "redis_ipc"
version = "0.1.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/mi7chal/redis-ipc"
homepage = "https://github.com/mi7chal/redis-ipc"
readme = "README.md"
description = "Simple crate for ipc (inter-process communication) and service-to-service communication based on redis."
keywords = ["ipc", "service-to-service", "redis", "communication"]
categories = ["api-bindings", "caching", "concurrency", "data-structures", "encoding"]

[dependencies]
redis = { version = "0.30.0", features = ["r2d2"] }
serde_json = "1.0"
serde = { version = "1.0.215", features = ["derive"] }
r2d2 = "0.8"
uuid = { version = "1.11", features = ["v4"] }

[dev-dependencies]
dotenvy = "0.15"
rand = "0.9.1"